space+l fix for visual mode

--- a/.vsvimrc
+++ b/.vsvimrc
@@ -38,6 +38,7 @@ noremap <Leader>y 0v$hy
 "space + h/l : move to beginning/end of the line
 noremap <Leader>h ^
 noremap <Leader>l $
+vnoremap <Leader>l $h
 
 "tab
 set tabstop=4 "set indent to four spaces
