--- a/dein.toml
+++ b/dein.toml
@@ -40,3 +40,9 @@ repo = 'tpope/vim-fugitive'
 
 [[plugins]]
 repo = 'airblade/vim-gitgutter'
+
+[[plugins]]
+repo = 'ctrlpvim/ctrlp.vim'
+
+[[plugins]]
+repo = 'osyo-manga/vim-anzu'
