add plugin and settings for deoplete

--- a/dein.toml
+++ b/dein.toml
@@ -58,11 +58,11 @@ repo = 'scrooloose/nerdtree'
 [[plugins]]
 repo = 'easymotion/vim-easymotion'
 
-# [[plugins]]
-# repo = 'Shougo/deoplete.nvim'
+[[plugins]]
+repo = 'Shougo/deoplete.nvim'
 
-# [[plugins]]
-# repo = 'roxma/nvim-yarp'
+[[plugins]]
+repo = 'roxma/nvim-yarp'
 
-# [[plugins]]
-# repo = 'roxma/vim-hug-neovim-rpc'
+[[plugins]]
+repo = 'roxma/vim-hug-neovim-rpc'
