--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -58,3 +58,26 @@ on_i = 1
 [[plugins]]
 repo = 'lazywei/vim-matlab'
 on_ft = 'matlab'
+
+#markdown
+[[plugins]]
+repo = 'plasticboy/vim-markdown'
+hook_source = '''
+    let g:vim_markdown_folding_disabled = 1
+    let g:vim_markdown_auto_insert_bullets = 0
+    let g:vim_markdown_conceal = 0
+    let g:vim_markdown_new_list_item_indent = 0
+'''
+on_ft = 'markdown'
+
+[[plugins]]
+repo = 'tyru/open-browser.vim'
+on_ft = 'markdown'
+
+[[plugins]]
+repo = 'kannokanno/previm'
+hook_source = '''
+    nnoremap <silent><C-p> :PrevimOpen<CR>
+'''
+on_ft = 'markdown'
+depends = ['vim-markdown', 'open-browser.vim']
