change clang-format not to limit length of line

--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -111,7 +111,8 @@ hook_source = '''
         \ "AllowShortBlocksOnASingleLine": "true",
         \ "AllowShortCaseLabelsOnASingleLine": "true",
         \ "AllowShortIfStatementsOnASingleLine": "true",
-        \ "AllowShortLoopsOnASingleLine": "true"
+        \ "AllowShortLoopsOnASingleLine": "true",
+        \ "ColumnLimit" : 0
     \ }
 
     function! CCodeCleanup()
