--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -129,6 +129,11 @@ hook_source = '''
 on_ft = ['c', 'cpp', 'cmake']
 
 [[plugins]]
+repo = 'Shougo/neoinclude.vim'
+on_ft = ['c', 'cpp']
+depends = ['deoplete.nvim']
+
+[[plugins]]
 repo = 'prettier/vim-prettier'
 build = 'npm install'
 on_ft    = ['javascript', 'typescript', 'vue', 'css', 'scss', 'json', 'markdown']
