--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -15,7 +15,7 @@ hook_source = '''
     let g:deoplete#auto_complete_delay = 0
     let g:deoplete#enable_camel_case = 0
     let g:deoplete#enable_ignore_case = 0
-    let g:deoplete#enable_refresh_always = 0
+    let g:deoplete#enable_refresh_always = 1
     let g:deoplete#enable_smart_case = 1
     let g:deoplete#file#enable_buffer_path = 1
     let g:deoplete#max_list = 10000
@@ -131,6 +131,9 @@ on_ft = ['c', 'cpp', 'cmake']
 [[plugins]]
 repo = 'Shougo/neoinclude.vim'
 on_ft = ['c', 'cpp']
+hook_source = '''
+    let g:neoinclude#paths = {'c':'C:/MinGw/include', 'cpp':'C:\MinGW\lib\gcc\mingw32\8.2.0\include\c++'}
+'''
 depends = ['deoplete.nvim']
 
 [[plugins]]
