add auto formatting settings for c/c++ after semi-colon input

--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -125,6 +125,10 @@ hook_source = '''
     autocmd BufWrite *.{h} :CCodeCleanup
     autocmd BufWrite *.{cpp} :CCodeCleanup
     autocmd BufWrite *.{hpp} :CCodeCleanup
+    autocmd FileType c imap <buffer> ; ;<Esc>:CCodeCleanup<CR>la
+    autocmd FileType cpp imap <buffer> ; ;<Esc>:CCodeCleanup<CR>la
+    autocmd FileType h imap <buffer> ; ;<Esc>:CCodeCleanup<CR>la
+    autocmd FileType hpp imap <buffer> ; ;<Esc>:CCodeCleanup<CR>la
 '''
 on_ft = ['c', 'cpp', 'cmake']
 
