--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -76,6 +76,7 @@ hook_source = '''
     let g:vim_markdown_folding_disabled = 1
     let g:vim_markdown_auto_insert_bullets = 0
     let g:vim_markdown_conceal = 0
+    let g:vim_markdown_conceal_code_blocks = 0
     let g:vim_markdown_new_list_item_indent = 0
 '''
 on_ft = 'markdown'
