add hook_add settings for colorizer to avoid heavy load and mapping

--- a/dein.toml
+++ b/dein.toml
@@ -84,3 +84,7 @@ repo = 'junegunn/fzf.vim'
 
 [[plugins]]
 repo = 'lilydjwg/colorizer'
+hook_add = '''
+    let g:colorizer_maxlines = 1000
+	let g:colorizer_nomap = 1
+'''
