--- a/dein.toml
+++ b/dein.toml
@@ -91,3 +91,77 @@ hook_add = '''
 
 [[plugins]]
 repo = 'markonm/traces.vim'
+
+[[plugins]]
+repo = 'prabirshrestha/async.vim'
+
+[[plugins]]
+repo = 'prabirshrestha/vim-lsp'
+hook_add = '''
+    let g:lsp_async_completion = 1
+    let g:lsp_diagnostics_enabled = 1
+    let g:lsp_signs_enabled = 1
+    let g:lsp_diagnostics_echo_cursor = 1
+    let g:lsp_virtual_text_enabled = 0
+    let g:lsp_highlights_enabled = 0
+    let g:lsp_textprop_enabled = 1
+    let g:lsp_signs_error = {'text': 'x'}
+    let g:lsp_signs_warning = {'text': '!'}
+    nnoremap <Space>ld :LspDefinition<CR>
+    nnoremap <Space>lf :LspDocumentFormat<CR>
+    nnoremap <Space>lh :LspHover<CR>
+    nnoremap <Space>lr :LspReferences<CR>
+    augroup lsp_etc
+        autocmd!
+        autocmd FileType 
+    augroup end
+    if executable('clangd')
+        augroup lsp_clangd
+            autocmd!
+            autocmd User lsp_setup call lsp#register_server({
+                \ 'name': 'clangd',
+                \ 'cmd': {server_info->['clangd']},
+                \ 'whitelist': ['c', 'cpp', 'objc', 'objcpp', 'cmake'],
+            \ })
+            autocmd FileType c,cpp,objc,objcpp,cmake setlocal omnifunc=lsp#complete
+        augroup end
+    endif
+    if executable('pyls')
+        augroup lsp_pyls
+            autocmd!
+            autocmd User lsp_setup call lsp#register_server({
+                \ 'name': 'pyls',
+                \ 'cmd': {server_info->['pyls']},
+                \ 'whitelist': ['python'],
+            \ })
+            autocmd FileType python setlocal omnifunc=lsp#complete
+        augroup end
+    endif
+'''
+
+[[plugins]]
+repo = 'prabirshrestha/asyncomplete.vim'
+hook_add = '''
+    inoremap <expr> <Tab> pumvisible() ? "\<C-n>" : "\<Tab>"
+    inoremap <expr> <S-Tab> pumvisible() ? "\<C-p>" : "\<S-Tab>"
+    inoremap <expr> <CR> pumvisible() ? "\<C-y>" : "\<CR>"
+    imap <C-Space> <Plug>(asyncomplete_force_refresh)
+    let g:asyncomplete_auto_popup = 1
+    autocmd! CompleteDone * if pumvisible() == 0 | pclose | endif
+'''
+
+[[plugins]]
+repo = 'prabirshrestha/asyncomplete-lsp.vim'
+
+[[plugins]]
+repo = 'prabirshrestha/asyncomplete-neosnippet.vim'
+hook_add = '''
+    autocmd User lsp_setup call asyncomplete#register_source(asyncomplete#sources#neosnippet#get_source_options({
+        \ 'name': 'neosnippet',
+        \ 'whitelist': ['*'],
+        \ 'completor': function('asyncomplete#sources#neosnippet#completor'),
+    \ }))
+    imap <C-k> <Plug>(neosnippet_expand_or_jump)
+    smap <C-k> <Plug>(neosnippet_expand_or_jump)
+    xmap <C-k> <Plug>(neosnippet_expand_target)
+'''
