add option for clangd in vim-lsp setting

--- a/dein.toml
+++ b/dein.toml
@@ -120,7 +120,7 @@ hook_add = '''
             autocmd!
             autocmd User lsp_setup call lsp#register_server({
                 \ 'name': 'clangd',
-                \ 'cmd': {server_info->['clangd']},
+                \ 'cmd': {server_info->['clangd', '-background-index']},
                 \ 'whitelist': ['c', 'cpp', 'objc', 'objcpp', 'cmake'],
             \ })
             autocmd FileType c,cpp,objc,objcpp,cmake setlocal omnifunc=lsp#complete
