--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -51,17 +51,6 @@ repo = 'Shougo/neosnippet-snippets'
 on_i = 1
 
 [[plugins]]
-repo = 'davidhalter/jedi'
-on_ft = 'python'
-
-[[plugins]]
-repo = 'zchee/deoplete-jedi'
-hook_source = '''
-    let g:deoplete#sources#jedi#server_timeout = 20
-'''
-on_ft = 'python'
-
-[[plugins]]
 repo = 'Townk/vim-autoclose'
 on_i = 1
 
@@ -117,3 +106,10 @@ hook_source = '''
 [[plugins]]
 repo = 'mattn/emmet-vim'
 on_ft = ['html', 'css', 'xml']
+
+[[plugins]]
+repo = 'jmcantrell/vim-virtualenv'
+on_ft = 'python'
+hook_source = '''
+    let g:virtualenv_directory = '.'
+'''
