--- a/dein.toml
+++ b/dein.toml
@@ -107,10 +107,10 @@ hook_add = '''
     let g:lsp_textprop_enabled = 1
     let g:lsp_signs_error = {'text': 'x'}
     let g:lsp_signs_warning = {'text': '!'}
-    nnoremap <Space>ld :LspDefinition<CR>
-    nnoremap <Space>lf :LspDocumentFormat<CR>
-    nnoremap <Space>lh :LspHover<CR>
-    nnoremap <Space>lr :LspReferences<CR>
+    nnoremap Ld :LspDefinition<CR>
+    nnoremap Lf :LspDocumentFormat<CR>
+    nnoremap Lh :LspHover<CR>
+    nnoremap Lr :LspReferences<CR>
 
     if executable('clangd')
         autocmd User lsp_setup call lsp#register_server({
