move settings for nerdtree from .vimrc to dein.toml

--- a/dein.toml
+++ b/dein.toml
@@ -53,6 +53,20 @@ repo = 'kana/vim-submode'
 
 [[plugins]]
 repo = 'scrooloose/nerdtree'
+hook_add = '''
+    nnoremap <silent><leader>t :NERDTreeToggle<CR>
+    let g:NERDTreeShowBookmarks=1
+    let g:NERDTreeShowHidden=1
+    let g:NERDTreeChDirMode=2
+    let g:NERDTreeDirArrowExpandable = "\uf07b "
+    let g:NERDTreeDirArrowCollapsible = "\uf07c "
+
+    augroup nerdTreeGroup
+        autocmd!
+        autocmd StdinReadPre * let s:std_in=1
+        autocmd VimEnter * if argc() == 0 && !exists("s:std_in") | NERDTree | endif
+    augroup END
+'''
 
 [[plugins]]
 repo = 'easymotion/vim-easymotion'
