--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -113,3 +113,7 @@ on_ft = 'python'
 hook_source = '''
     let g:virtualenv_directory = '.'
 '''
+
+[[plugins]]
+repo = 'rhysd/reply.vim'
+on_cmd = ['Repl', 'ReplAuto']
