--- a/dein.toml
+++ b/dein.toml
@@ -126,15 +126,14 @@ hook_add = '''
     let g:lsp_signs_warning = {'text': '!'}
 
     if executable('clangd')
-        autocmd User lsp_setup call lsp#register_server({
-            \ 'name': 'clangd',
-            \ 'cmd': {server_info->['clangd', '-background-index']},
-            \ 'whitelist': ['c', 'cpp', 'objc', 'objcpp', 'cmake'],
-        \ })
         augroup lspCppGroup
             autocmd!
+            autocmd User lsp_setup call lsp#register_server({
+                \ 'name': 'clangd',
+                \ 'cmd': {server_info->['clangd', '-background-index']},
+                \ 'whitelist': ['c', 'cpp', 'objc', 'objcpp', 'cmake'],
+            \ })
             autocmd FileType c,cpp,objc,objcpp,cmake setlocal omnifunc=lsp#complete
-            autocmd FileType c,cpp,objc,objcpp,cmake call deoplete#custom#buffer_option('auto_complete', v:false)
         augroup END
     endif
     nnoremap <C-l>d :LspDefinition<CR>
@@ -144,15 +143,14 @@ hook_add = '''
 
     let s:pyls_path = fnamemodify(g:python3_host_prog, ':h') . '/' . 'pyls'
     if executable(s:pyls_path)
-        autocmd User lsp_setup call lsp#register_server({
-            \ 'name': 'pyls',
-            \ 'cmd': {server_info->[s:pyls_path]},
-            \ 'whitelist': ['python'],
-        \ })
         augroup lspPythonGroup
             autocmd!
+            autocmd User lsp_setup call lsp#register_server({
+                \ 'name': 'pyls',
+                \ 'cmd': {server_info->[s:pyls_path]},
+                \ 'whitelist': ['python'],
+            \ })
             autocmd FileType python setlocal omnifunc=lsp#complete
-            autocmd FileType python call deoplete#custom#buffer_option('auto_complete', v:false)
         augroup END
     endif
 '''
@@ -174,11 +172,14 @@ repo = 'prabirshrestha/asyncomplete-lsp.vim'
 [[plugins]]
 repo = 'prabirshrestha/asyncomplete-neosnippet.vim'
 hook_add = '''
-    autocmd User lsp_setup call asyncomplete#register_source(asyncomplete#sources#neosnippet#get_source_options({
-        \ 'name': 'neosnippet',
-        \ 'whitelist': ['*'],
-        \ 'completor': function('asyncomplete#sources#neosnippet#completor'),
-    \ }))
+    augroup asynCompNeosnipGroup
+        autocmd!
+        autocmd User lsp_setup call asyncomplete#register_source(asyncomplete#sources#neosnippet#get_source_options({
+            \ 'name': 'neosnippet',
+            \ 'whitelist': ['*'],
+            \ 'completor': function('asyncomplete#sources#neosnippet#completor'),
+        \ }))
+    augroup END
 '''
 
 [[plugins]]
