--- a/dein.toml
+++ b/dein.toml
@@ -153,6 +153,17 @@ hook_add = '''
             autocmd FileType python setlocal omnifunc=lsp#complete
         augroup END
     endif
+
+    if executable('bash-language-server')
+        augroup lspBashGroup
+            autocmd!
+            autocmd User lsp_setup call lsp#register_server({
+                \ 'name': 'bash-language-server',
+                \ 'cmd': {server_info->[&shell, &shellcmdflag, 'bash-language-server start']},
+                \ 'whitelist': ['sh'],
+                \ })
+        augroup END
+    endif
 '''
 
 [[plugins]]
