[fix]add forgotten endif

--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -185,6 +185,7 @@ hook_add = '''
                 \ 'whitelist': ['javascript', 'javascript.jsx', 'javascriptreact', 'typescript', 'typescript.tsx'],
                 \ })
         augroup END
+    endif
 '''
 
 [[plugins]]
