--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -162,6 +162,7 @@ hook_add = '''
                 \ 'cmd': {server_info->[&shell, &shellcmdflag, 'bash-language-server start']},
                 \ 'whitelist': ['sh'],
                 \ })
+            autocmd FileType sh setlocal omnifunc=lsp#complete
         augroup END
     endif
 
@@ -173,6 +174,7 @@ hook_add = '''
                 \ 'cmd': {server_info->['vim-language-server', '--stdio']},
                 \ 'whitelist': ['vim'],
                 \ })
+            autocmd FileType vim setlocal omnifunc=lsp#complete
         augroup END
     endif
 
@@ -184,6 +186,7 @@ hook_add = '''
                 \ 'cmd': {server_info->[&shell, &shellcmdflag, 'typescript-language-server --stdio']},
                 \ 'whitelist': ['javascript', 'javascript.jsx', 'javascriptreact', 'typescript', 'typescript.tsx'],
                 \ })
+            autocmd FileType typescript setlocal omnifunc=lsp#complete
         augroup END
     endif
 '''
