[update]add deoplete-vim-lsp plugin for vim-lsp completion using deoplete

--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -219,6 +219,10 @@ hook_add = '''
 '''
 
 [[plugins]]
+repo = 'lighttiger2505/deoplete-vim-lsp'
+depends = ['deoplete.nvim']
+
+[[plugins]]
 repo = 'osyo-manga/vim-precious'
 
 [[plugins]]
