[update]set filetypes for not to show default snippets in neosnippet-snippets

--- a/.vim/dein_lazy.toml
+++ b/.vim/dein_lazy.toml
@@ -42,6 +42,10 @@ hook_source = '''
     if has('conceal')
         set conceallevel=2 concealcursor=niv
     endif
+    let g:neosnippet#disable_runtime_snippets = {
+        \ 'text': 1,
+        \ 'markdown': 1,
+    \ }
     let g:neosnippet#snippets_directory='~/dotfiles/.vim/neosnippet/'
 '''
 on_i = 1
