[update]add vim-edgemotion plugin

--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -291,3 +291,10 @@ repo = 'osyo-manga/vim-precious'
 
 [[plugins]]
 repo = 'Shougo/context_filetype.vim'
+
+[[plugins]]
+repo = 'haya14busa/vim-edgemotion'
+hook_add = '''
+    map <C-j> <Plug>(edgemotion-j)
+    map <C-k> <Plug>(edgemotion-k)
+'''
