--- a/.vim/dein.toml
+++ b/.vim/dein.toml
@@ -297,3 +297,19 @@ hook_add = '''
 
 [[plugins]]
 repo = 'lambdalisue/gina.vim'
+
+[[plugins]]
+repo = 'lambdalisue/fern.vim'
+hook_add = '''
+    let g:fern#default_hidden = 1
+
+    function! s:init_fern() abort
+        nmap <buffer> s <Nop>
+        nmap <buffer> fs <Plug>(fern-action-open:select)
+    endfunction
+
+    augroup fern-custom
+        autocmd! *
+        autocmd FileType fern call s:init_fern()
+    augroup END
+'''
