--- a/WindowsTerminal/settings.json
+++ b/WindowsTerminal/settings.json
@@ -27,7 +27,8 @@
         "defaults": {
             // "fontFace": "Cica",
             "fontFace": "Delugia Nerd Font",
-            "fontSize": 10
+            "fontSize": 10,
+            "foreground": "#FFFFFF"
         },
         "list": [
             {
