modify mappings for nextTab and prevTab for not to override cursor moving key bind in command history

--- a/WindowsTerminal/settings.json
+++ b/WindowsTerminal/settings.json
@@ -59,8 +59,7 @@
         { "command": "find", "keys": "ctrl+shift+f" },
 
         { "command": "newTab", "keys": ["Ctrl+t"] },
-        { "command": "nextTab", "keys": ["Ctrl+n"] },
-        { "command": "prevTab", "keys": ["Ctrl+p"] },
+        { "command": "nextTab", "keys": ["Ctrl+g"] },
         {
             "command": { "action": "splitPane", "split": "vertical" },
             "keys": ["Ctrl+v"]
