--- a/.gitconfig
+++ b/.gitconfig
@@ -8,6 +8,7 @@
     acm = !git add . && git commit -m
     setup = !git init && touch .gitignore && git add .gitignore && git commit -m 'First commit'
     today = log --after='`date "+%Y-%m-%d"` 0:0' --oneline --branches *
+    ai = add -i
 
 [color]
     ui = auto
