use nvim for difftool in git

--- a/.gitconfig
+++ b/.gitconfig
@@ -15,3 +15,15 @@
 
 [pull]
     rebase = false
+
+[diff]
+    tool = nvimdiff
+
+[difftool "nvimdiff"]
+    cmd = "nvim -R -d -c \"wincmd l\" -d \"$LOCAL\" \"$REMOTE\""
+
+[merge]
+    tool = nvimdiff
+
+[mergetool "nvimdiff"]
+    cmd = "nvim -d -c \"4wincmd w | wincmd J\" -d \"$LOCAL\" \"$BASE\" \"$REMOTE\" \"$MERGED\""
