change git diff configuration to improve diff view

--- a/.gitconfig
+++ b/.gitconfig
@@ -18,6 +18,8 @@
 
 [diff]
     tool = nvimdiff
+    algorithm = histogram
+    colorMoved = dimmed-zebra
 
 [difftool "nvimdiff"]
     cmd = "nvim -R -d -c \"wincmd l\" -d \"$LOCAL\" \"$REMOTE\""
